added login page

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.StudyAnalayzer" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
+    <!-- Application Theme -->
     <style name="Theme.StudyAnalayzer" parent="Base.Theme.StudyAnalayzer" />
 </resources>
