--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,15 +9,26 @@
     tools:context=".LoginActivity">
 
 
+    <ImageView
+        android:id="@+id/Login"
+        android:layout_width="415dp"
+        android:layout_height="369dp"
+        android:layout_marginBottom="460dp"
+
+        android:layout_weight="1"
+        android:src="@drawable/mainloginscreen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="1439dp"
         android:layout_marginTop="200dp"
 
-
+        android:id="@+id/cardid"
         android:outlineAmbientShadowColor="@color/black"
-        app:cardCornerRadius="80dp"
-        app:cardElevation="50dp"
+        app:cardCornerRadius="50dp"
         app:cardUseCompatPadding="false"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +38,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="540dp">
 
             <TextView
                 android:id="@+id/textView2"
@@ -37,12 +48,12 @@
                 android:layout_height="105dp"
 
 
-                android:layout_marginTop="88dp"
+                android:layout_marginTop="68dp"
                 android:text="Join the StudyAnalayzer"
                 android:textSize="34dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.473"
+                app:layout_constraintHorizontal_bias="0.492"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,14 +79,34 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="292dp"
                 android:ems="10"
-                android:inputType="textPassword"
                 android:hint="password"
+                android:inputType="textPassword"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/login_join"
+                android:layout_width="278dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="384dp"
+
+                android:backgroundTint="@color/black"
+                android:text="join"
+                android:textColorLink="#131212"
+                android:textSize="20dp"
+
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
