--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,4 +7,100 @@
     android:layout_height="match_parent"
     tools:context=".Home">
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="420dp"
+        android:layout_height="76dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+
+
+                    android:id="@+id/homeNav"
+
+                    android:layout_width="69dp"
+                    android:layout_marginTop="10dp"
+
+
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="40dp"
+                    android:outlineAmbientShadowColor="@color/black"
+                    app:srcCompat="@drawable/homelight" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="home"
+                    android:layout_marginLeft="60dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+
+
+                    android:id="@+id/notesNav"
+
+                    android:layout_width="69dp"
+                    android:layout_marginTop="10dp"
+
+
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="40dp"
+                    android:outlineAmbientShadowColor="@color/black"
+                    app:srcCompat="@drawable/noteslight" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Notes"
+                    android:layout_marginLeft="60dp"/>
+            </LinearLayout> <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+
+
+                    android:id="@+id/pomodrome  Nav"
+
+                    android:layout_width="69dp"
+                    android:layout_marginTop="10dp"
+
+
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="40dp"
+                    android:outlineAmbientShadowColor="@color/black"
+                    app:srcCompat="@drawable/pomodromelight" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pomodrome"
+                    android:layout_marginLeft="40dp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
