--- a/app/src/main/res/layout/activity_fregment_holder.xml
+++ b/app/src/main/res/layout/activity_fregment_holder.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".Fregment_holder">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -63,7 +63,7 @@
 
 
                     android:layout_height="34dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="20dp"
                     android:outlineAmbientShadowColor="@color/black"
                     app:srcCompat="@drawable/noteslight" />
 
@@ -71,8 +71,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Notes"
-                    android:layout_marginLeft="60dp"/>
-            </LinearLayout> <LinearLayout
+                    android:layout_marginLeft="40dp"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -80,14 +81,14 @@
                 <ImageView
 
 
-                    android:id="@+id/pomodrome  Nav"
+                    android:id="@+id/pomodromeNav"
 
                     android:layout_width="69dp"
                     android:layout_marginTop="10dp"
 
 
                     android:layout_height="34dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="20dp"
                     android:outlineAmbientShadowColor="@color/black"
                     app:srcCompat="@drawable/pomodromelight" />
 
@@ -95,12 +96,42 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pomodrome"
+                    android:layout_marginLeft="20dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+
+
+                    android:id="@+id/scoreNav"
+
+                    android:layout_width="69dp"
+                    android:layout_marginTop="10dp"
+
+
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="20dp"
+                    android:outlineAmbientShadowColor="@color/black"
+                    app:srcCompat="@drawable/scorecardlight" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="score"
                     android:layout_marginLeft="40dp"/>
             </LinearLayout>
         </LinearLayout>
 
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
