--- a/app/src/main/res/layout/activity_fregment_holder.xml
+++ b/app/src/main/res/layout/activity_fregment_holder.xml
@@ -11,8 +11,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="420dp"
-        android:layout_height="76dp"
+        android:layout_width="420sp"
+        android:layout_height="76sp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
