--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,7 +66,7 @@
         </TextView>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerContainer"
+            android:id="@+id/homeSubRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -76,8 +76,8 @@
             android:layout_marginTop="16dp"
            />
         <TableLayout
-            app:layout_constraintTop_toBottomOf="@id/recyclerContainer"
-            app:layout_constraintBottom_toTopOf="@id/recyclerContainer2"
+            app:layout_constraintTop_toBottomOf="@id/homeSubRecycler"
+            app:layout_constraintBottom_toTopOf="@id/homeNotesRecycleView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="match_parent"
@@ -106,24 +106,15 @@
         </TableLayout>
         <!-- Second RecyclerView -->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerContainer2"
+            android:id="@+id/homeNotesRecycleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/recyclerContainer"
+            app:layout_constraintTop_toBottomOf="@id/homeSubRecycler"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
             />
 
-        <!-- CalendarView -->
-        <CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/recyclerContainer2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
