Add Teacher Achivement , mcq test

--- a/app/src/main/res/layout/activity_fregment_holder.xml
+++ b/app/src/main/res/layout/activity_fregment_holder.xml
@@ -134,8 +134,10 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" >
+        tools:layout_editor_absoluteX="0dp">
 
     </FrameLayout>
 
