--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".homefragment.Home">
 
     <!-- TODO: Update blank fragment layout-->
     <com.google.android.material.appbar.AppBarLayout
@@ -95,6 +95,7 @@
                     android:layout_marginStart="80sp"
                     android:backgroundTint="@color/material_dynamic_neutral20"
                     android:text="Test"
+                    android:id="@+id/test"
 
 
                     >
@@ -126,12 +127,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/notestextview" />
 
-        <CalendarView
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/TargetPanel"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/homeNotesRecycleView" />
+            android:text="Target Achivement"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/homeNotesRecycleView"
+            app:layout_constraintBottom_toTopOf="@+id/targetrecycle" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id = "@+id/targetrecycle"
+            android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@id/TargetPanel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
