--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -3,9 +3,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Notes">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".notesfragment.Notes">
 
     <!-- TODO: Update blank fragment layout -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!-- TODO: Update blank fragment layout-->
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/toolbarContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/notesNotesHeadline"
+                android:elevation="200dp">
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:titleMarginStart="30dp"
+                    app:title="StudyAnalyzer"
+                    app:titleTextColor="@color/black"
+
+                    >
+
+
+                </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.AppBarLayout>
+            <TextView
+                android:id="@+id/notesNotesHeadline"
+                android:text="Notes For Study"
+                android:textColor="@color/black"
+                android:textSize="24dp"
+                android:layout_width="match_parent"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="@+id/toolbarContainer"
+                app:layout_constraintBottom_toTopOf="@+id/noteContainer"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_height="wrap_content"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/noteContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/notesNotesHeadline"/>
+            <TextView
+                android:id="@+id/selectedSubjectName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/noteContainer"
+                android:text="JAVA NOTES"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                android:textStyle="italic"
+
+                />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/chapterContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/selectedSubjectName"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 
 </FrameLayout>
