--- a/app/src/main/res/layout/targetrecycleview.xml
+++ b/app/src/main/res/layout/targetrecycleview.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/targetrecycleview"
         android:layout_width="318dp"
         android:layout_height="183dp"
         android:layout_marginHorizontal="25dp"
