--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-   android:orientation="vertical"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".homefragment.Home">
@@ -36,121 +36,124 @@
         android:scrollbars = "none"
         >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!-- First RecyclerView -->
-
-        <TextView
-            android:id="@+id/teacherScore"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:text="Teacher Score "
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginStart="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-        </TextView>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/homeSubRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/teacherScore" />
-
-        <TableLayout
-            android:id="@+id/tableformcq"
-            app:layout_constraintTop_toBottomOf="@id/homeSubRecycler"
-            app:layout_constraintBottom_toTopOf="@id/notestextview"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-            <TableRow
-                android:paddingStart="10sp"
-                android:paddingBottom="10dp"
-
-                >
-                <TextView
-                    android:layout_marginStart="10sp"
-                    android:text="UnderStanding MCQ Test "
-                    />
-
-                <Button
-                    android:layout_marginStart="80sp"
-                    android:backgroundTint="@color/material_dynamic_neutral20"
-                    android:text="Test"
-                    android:id="@+id/test"
-
-
-                    >
-
-                </Button>
-            </TableRow>
-
-        </TableLayout>
-
-        <TextView
-            android:id="@+id/notestextview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Subject Notes"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/tableformcq"
-            app:layout_constraintBottom_toTopOf="@+id/homeNotesRecycleView" />
-        <!-- Second RecyclerView -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/homeNotesRecycleView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/notestextview" />
-
-        <TextView
-            android:id="@+id/TargetPanel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Target Achivement"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/homeNotesRecycleView"
-            app:layout_constraintBottom_toTopOf="@+id/targetrecycle" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id = "@+id/targetrecycle"
-            android:layout_width="match_parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@id/TargetPanel"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <!-- First RecyclerView -->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/teacherScore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:text="Teacher Score "
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+            </TextView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/homeSubRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/teacherScore" />
+
+            <TableLayout
+                android:id="@+id/tableformcq"
+                app:layout_constraintTop_toBottomOf="@id/homeSubRecycler"
+                app:layout_constraintBottom_toTopOf="@id/notestextview"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TableRow
+                    android:paddingStart="10sp"
+                    android:paddingBottom="10dp"
+
+                    >
+                    <TextView
+                        android:layout_marginStart="10sp"
+                        android:text="UnderStanding MCQ Test "
+                        />
+
+                    <Button
+                        android:layout_marginStart="80sp"
+                        android:backgroundTint="@color/material_dynamic_neutral20"
+                        android:text="Test"
+                        android:id="@+id/test"
+
+
+                        >
+
+                    </Button>
+                </TableRow>
+
+            </TableLayout>
+
+            <TextView
+                android:id="@+id/notestextview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Subject Notes"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/homeNotesRecycleView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tableformcq" />
+            <!-- Second RecyclerView -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/homeNotesRecycleView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/notestextview" />
+
+            <TextView
+                android:id="@+id/TargetPanel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Target Achivement"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/targetrecycle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/homeNotesRecycleView" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/targetrecycle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/TargetPanel">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 
