--- a/app/src/main/res/layout/fragment_pomodrome.xml
+++ b/app/src/main/res/layout/fragment_pomodrome.xml
@@ -3,9 +3,139 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Pomodrome">
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!-- TODO: Update blank fragment layout-->
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/toolbarContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="200dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:titleMarginStart="30dp"
+                    app:title="StudyAnalyzer"
+                    app:titleTextColor="@color/black"
+
+                    >
+
+
+                </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/timeProgressContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FDF6FE"
+                android:backgroundTint="#FDF6FE"
+                android:elevation="0dp"
+                app:cardElevation="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbarContainer">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:id="@+id/timeProgress"
+                        android:layout_width="239dp"
+                        android:layout_height="205dp"
+
+                        app:indicatorSize="250dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.498"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.49">
+
+
+                    </com.google.android.material.progressindicator.CircularProgressIndicator>
+
+                    <TextView
+                        android:id="@+id/text"
+                        android:layout_width="137dp"
+                        android:layout_height="38dp"
+                        android:layout_marginBottom="68dp"
+                        android:gravity="center"
+                        android:text="00:00:00"
+                        android:textSize="28dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/timeProgress"
+                        app:layout_constraintEnd_toEndOf="@+id/timeProgress"
+                        app:layout_constraintHorizontal_bias="0.504"
+                        app:layout_constraintStart_toStartOf="@+id/timeProgress"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.723">
+
+                    </TextView>
+
+                    <Button
+                        android:id="@+id/starttoFocus"
+                        android:layout_width="225dp"
+                        android:layout_height="63dp"
+                        android:layout_marginTop="28dp"
+                        android:backgroundTint="@color/black"
+                        android:text="Start To Focus"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.108"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/timeProgress" />
+
+                    <Button
+                        android:id="@+id/exit"
+                        android:layout_width="97dp"
+                        android:layout_height="56dp"
+                        android:layout_marginTop="28dp"
+                        android:backgroundTint="@color/black"
+                        android:text="Exit"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/timeProgress">
+
+                    </Button>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycletime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+
+                app:layout_constraintTop_toBottomOf="@+id/timeProgressContainer" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </FrameLayout>
